# quizkit

./: .gitignore  README.md  pyproject.toml
oxi_quizkit/: .gitignore  Cargo.toml  README.md  pyproject.toml
oxi_quizkit/benches/: benchmarks.rs
oxi_quizkit/src/: lib.rs
oxidized/: Cargo.toml  README.md  pyproject.toml
oxidized/src/: lib.rs
oxiquizkit/: Cargo.toml  pyproject.toml
oxiquizkit/benches/: benchmarks.rs
oxiquizkit/src/: core.rs  fibonacci.rs  fourier.rs  holography.rs  lib.rs  python.rs  readers.rs  writers.rs
oxiquizkit/tests/: test_oxiquizkit.rs
python/quizkit/: holography.py  plotting.py  simulation.py  writers.py
python/quizkit/scripts/: run_quizkit.py
tests/: test_galsim.py  test_holography.py  test_oxiquizkit.py  test_rustworkx.py
