[Project]
name = "oxi_quizkit"
version = "0.1.0"
description = ""
authors = [{ name = "M. J. Wilson" }]
requires-python = "==3.12.2"
readme = "README.md"
dependencies = [
    "maturin>=1.1.0,<2",
    "numpy>=1.26.0,<2",
]

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
module-name = "oxi_quizkit"