[package]
name = "oxidized"
version = "0.1.0"
edition = "2021"

[lib]
name = "oxidized"
crate-type = ["cdylib"]

[dependencies]
rayon = "*"
numpy = { version = "*" }
pyo3 = { version = "*", features = ["extension-module"] }
ndarray = {version = "*", features = ["rayon"] }
itertools = "*"
rand = "*"
nalgebra = "*"
serde = {version = "*", features = ["derive"]}
serde_json = "*"
GSL = "*"

[profile.release]
opt-level = 3
lto = true