[package]
name = "oxiquizkit"
version = "0.1.0"
edition = "2021"

[lib]
name = "oxiquizkit"
crate-type = ["cdylib", "rlib"]

[features]
extension-module = ["pyo3/extension-module"]
default = []

[dependencies]
tempfile = "3.8"
libm = "*"
serde = {version = "*", features = ["derive"]}
serde_json = "*"
rayon = "*" # threading
numpy = { version = "0.29" }
ndarray = {version = "*", features = ["rayon"] } # multi-slice arrays, broadcastring; no linear algebra.
itertools = "*"
rand = "*"
hdf5 = "0.8.1"
fitsio = "0.21.10"
# nalgebra = "*" # spatial transformations, rotation, etc.
# GSL = "*"
# num-complex = "*"
# oxifft = "*" # rust implementation of fftw. 
# faer = "*" # 2D linear algebra with no BLAS/LAPACK calling.
pyo3 = { version = "0.29" }

[dev-dependencies]
approx = ">0.4"
criterion = ">0.4"

# NB "target-cpu=arm64"; "target-cpu=native".
# [build]
# rustflags = ["-C", "target-cpu=arm64"]

[profile.release]
# codegen-units = 1
opt-level = 3
lto = true
# overflow-checks = false

[[bench]]
name = "benchmarks"
harness = false